algunos cambio en las card